fixed some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -50,16 +50,20 @@ body {
   position: absolute;
   top: 0;
   width: 30px;
-  animation: pluse 1s infinite;
+  transform: rotate(alternate);
+  transform-origin: center center;
+  animation: pulse 1s infinite;
   background: url("../images/star.svg") no-repeat center center / contain transparent;
 }
 
 @keyframes pulse {
 
   0% {
-    transform: scale(1) rotate(0deg);
+    width: 30px;
+    height: 30px;
   }
   100%{
-    transform: scale(3) rotate(90deg);
+    width: 50px;
+    height: 50px;
   }
 }
